reusable component layout done

--- a/index.html
+++ b/index.html
@@ -4,34 +4,8 @@
   <meta charset="UTF-8">
   <title>Marfeel Test</title>
   <link rel="stylesheet" href="./css/style.css">
+  <script type="text/javascript" src="./js/main.js"></script>
 </head>
 <body>
-  <!-- test component for general layout and css -->
-  <div class="is-wrapper is-centered-x is-column">
-    <div class="is-wrapper is-circle is-centered-x is-centered-y">
-      <div class="is-column has-text-align-center">
-        <h1>Revenue</h1>
-        <h1>200.000EUR</h1>
-      </div>
-    </div>
-    <div class="is-wrapper is-centered-y">
-      <div class="is-row is-wrapper">
-        <div class="is-column">
-          <h2>Tablet</h2>
-          <div class="is-row is-wrapper">
-            <p>60%</p>
-            <p>120.000EUR</p>
-          </div>
-        </div>
-        <div class="is-column">
-          <h2>Smartphone</h2>
-          <div class="is-row is-wrapper">
-            <p>40%</p>
-            <p>80.000EUR</p>
-          </div>
-        </div>
-      </div>
-    </div>
-    <div class="is-line"></div>
-  </div>
+  <main class="main is-wrapper is-row"></main>
 </body>
