missing graphs and responsiveness

--- a/index.html
+++ b/index.html
@@ -7,5 +7,5 @@
   <script type="text/javascript" src="./js/main.js"></script>
 </head>
 <body>
-  <main class="main is-wrapper is-row"></main>
+  <main class="main is-wrapper is-row is-centered-y is-centered-x"></main>
 </body>
